--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/verdePastel"
         app:layout_constraintVertical_bias="0.0">
 
         <ImageView
@@ -22,7 +23,7 @@
             android:layout_width="421dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            tools:srcCompat="@drawable/logo_sin_fondo" />
+            app:srcCompat="@drawable/logo_sin_fondo" />
     </LinearLayout>
 
     <TextView
@@ -30,7 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="49sp"
-        android:text="TextView"
+        android:text="@string/user"
+        android:textSize="17sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,7 +73,9 @@
         android:id="@+id/txtViewIdPasahitza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/pasw"
+        android:textSize="17sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtEditIdMail"
         app:layout_constraintHorizontal_bias="0.0"
@@ -84,7 +89,7 @@
         android:layout_height="59sp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Pass"
+        android:hint="@string/paswTxt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtViewIdPasahitza"
         app:layout_constraintHorizontal_bias="0.0"
@@ -97,9 +102,8 @@
         android:layout_width="319sp"
         android:layout_height="59dp"
         android:ems="10"
-        android:hint="erabiltzailea"
+        android:hint="@string/userTxt"
         android:inputType="text"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtViewIdMail"
         app:layout_constraintHorizontal_bias="0.0"
