--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,89 +26,85 @@
             app:srcCompat="@drawable/logo_sin_fondo" />
     </LinearLayout>
 
+    <!-- TextView "Usuario" -->
+
+    <!-- EditText para el campo de usuario -->
+
     <TextView
-        android:id="@+id/txtViewIdMail"
+        android:id="@+id/textViewUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="49sp"
+        android:layout_marginTop="250dp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
         android:text="@string/user"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LayIdUpBanner"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextUsuario"
+        android:layout_width="0dp"
+        android:layout_height="48sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
+        android:hint="@string/userTxt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewUsuario"
+        />
+
+    <!-- TextView "Contraseña" -->
+    <TextView
+        android:id="@+id/textViewContrasena"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="75sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
+        android:text="@string/pasw"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario"
+        />
+
+    <!-- EditText para el campo de contraseña -->
+    <EditText
+        android:id="@+id/editTextContrasena"
+        android:layout_width="0dp"
+        android:layout_height="48sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
+        android:hint="@string/paswTxt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewContrasena"
+        />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="148sp"
         android:layout_height="64sp"
         android:backgroundTint="#C6E5B1"
-        android:text="Button"
+        android:text="@string/btnLogin"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.783"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextContrasena"
+        app:layout_constraintVertical_bias="0.502" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="148sp"
         android:layout_height="64sp"
         android:backgroundTint="#C6E5B1"
-        android:text="Button"
+        android:text="@string/btnRegister"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.501" />
-
-    <TextView
-        android:id="@+id/txtViewIdPasahitza"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pasw"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtEditIdMail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtEditIdMail"
-        app:layout_constraintTop_toBottomOf="@+id/txtEditIdMail"
-        app:layout_constraintVertical_bias="0.039" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="319sp"
-        android:layout_height="59sp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="@string/paswTxt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtViewIdPasahitza"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtViewIdPasahitza"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewIdPasahitza"
-        app:layout_constraintVertical_bias="0.024" />
-
-    <EditText
-        android:id="@+id/txtEditIdMail"
-        android:layout_width="319sp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:hint="@string/userTxt"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtViewIdMail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtViewIdMail"
-        app:layout_constraintTop_toBottomOf="@+id/txtViewIdMail"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextContrasena"
+        app:layout_constraintVertical_bias="0.502" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
