--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,24 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hasieraFondo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/verdePastel"
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/hasieraLogoEnpresa"
         android:layout_width="109dp"
         android:layout_height="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/hasieraTxt"
         app:layout_constraintVertical_bias="0.75"
         app:srcCompat="@drawable/logo_sin_fondo" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/hasieraLogoApp"
         android:layout_width="311dp"
         android:layout_height="321dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,17 +31,17 @@
         app:srcCompat="@drawable/logo_oma" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/hasieraTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:textColor="@color/black"
         android:text="@string/createdBy"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/hasieraLogoApp"
         app:layout_constraintVertical_bias="0.306" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
