--- a/app/src/main/res/layout/activity_nire_kontua.xml
+++ b/app/src/main/res/layout/activity_nire_kontua.xml
@@ -184,6 +184,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nrkntTxtPasahitza" />
 
     <!-- TextView "Errepikatu pasahitza:" -->
+
     <TextView
         android:id="@+id/nrkntTxtPasahitza2"
         android:layout_width="wrap_content"
@@ -206,6 +207,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nrkntTxtPasahitza" />
 
+    <!-- TextView "Errepikatu pasahitza:" -->
+
+    <TextView
+        android:id="@+id/nrkntTxtErabiltzaileMota"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/nrkntTxtErabiltzaileMota"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nrkntEditPasahitza" />
+    <!-- Erabiltzaile mota EditText (textPassword) -->
+    <EditText
+        android:id="@+id/nrkntEditErbltzMta"
+        android:layout_width="211dp"
+        android:layout_height="48dp"
+        android:hint="@string/nrkntEditErbltzMta"
+        android:inputType="textPassword"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtErabiltzaileMota"
+        app:layout_constraintVertical_bias="0.0" />
 
     <!-- INSIDE HEADER -->
     <LinearLayout
@@ -214,7 +241,7 @@
         android:layout_height="match_parent"
         android:background="@color/verdePastel"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -253,7 +280,8 @@
             android:textAllCaps="true" />
 
     </LinearLayout>
-  <!-- header fin -->
+
+    <!-- header fin -->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
