--- a/app/src/main/res/layout/activity_pribatasun_politikak.xml
+++ b/app/src/main/res/layout/activity_pribatasun_politikak.xml
@@ -4,43 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFFFFF"
-    tools:context=".erreserbak">
+    tools:context=".PribatasunPolitikak">
 
-  <!-- HEADER -->
-    <LinearLayout
-        android:id="@+id/loginBanner"
-        android:layout_width="411sp"
-        android:layout_height="125sp"
-        android:background="@color/verdePastel"
-        android:orientation="horizontal"
+    <ScrollView
+        android:layout_width="409dp"
+        android:layout_height="604dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/loginBanner">
 
-        <!-- Banner logo -->
-
-        <Button
-            android:id="@+id/IdBtnMenuZabaldu"
-            android:layout_width="61sp"
-            android:layout_height="53sp"
-            android:layout_gravity="center"
-            android:foreground="@drawable/menu" />
-
-        <ImageView
-            android:id="@+id/loginBannerLogo"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/menLogoDeskripzioa"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/logo_oma" />
+            android:layout_marginLeft="30sp"
+            android:layout_marginTop="20sp"
+            android:layout_marginRight="30sp"
+            android:orientation="vertical">
 
-    </LinearLayout>
-
-  <!-- INSIDE HEADER -->
+            <TextView
+                android:id="@+id/tvPribatasunPolitikak"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"/>
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/idLayOpzioak"
@@ -107,6 +95,38 @@
             android:layout_height="wrap_content"
             android:background="#00000000"
             android:foreground="@drawable/logo_oma" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/loginBanner"
+        android:layout_width="411sp"
+        android:layout_height="125sp"
+        android:background="@color/verdePastel"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <!-- Banner logo -->
+
+        <Button
+            android:id="@+id/IdBtnMenuZabaldu"
+            android:layout_width="61sp"
+            android:layout_height="53sp"
+            android:layout_gravity="center"
+            android:foreground="@drawable/menu" />
+
+        <ImageView
+            android:id="@+id/loginBannerLogo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="@string/menLogoDeskripzioa"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/logo_oma" />
 
     </LinearLayout>
 
