--- a/app/src/main/res/layout/activity_erreserbak.xml
+++ b/app/src/main/res/layout/activity_erreserbak.xml
@@ -8,6 +8,62 @@
     tools:context=".erreserbak">
 
   <!-- HEADER -->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+
+        android:layout_height="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginBanner"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <LinearLayout
         android:id="@+id/loginBanner"
         android:layout_width="411sp"
@@ -27,6 +83,7 @@
             android:layout_width="61sp"
             android:layout_height="53sp"
             android:layout_gravity="center"
+            android:background="@android:color/transparent"
             android:foreground="@drawable/menu" />
 
         <ImageView
@@ -63,6 +120,7 @@
             android:layout_marginStart="3sp"
             android:layout_marginTop="36sp"
             android:backgroundTint="#00FFFFFF"
+            android:background="@android:color/transparent"
             android:foreground="@android:drawable/ic_menu_close_clear_cancel" />
 
         <!-- nire kontua(Nire_Kontua) -->
@@ -74,7 +132,9 @@
             android:backgroundTint="#00FFFFFF"
             android:text="@string/menKontua"
             android:textAlignment="viewStart"
-            android:textAllCaps="true" />
+            android:textAllCaps="true"
+            android:layout_marginLeft="5sp"
+            android:background="@android:color/transparent"/>
 
         <!-- erreserbak(Egindako_Erreserbak) -->
         <Button
@@ -85,6 +145,8 @@
             android:backgroundTint="#00FFFFFF"
             android:text="@string/menErreserbak"
             android:textAlignment="viewStart"
+            android:background="@android:color/transparent"
+            android:layout_marginLeft="5sp"
             android:textAllCaps="true" />
 
         <Button
@@ -95,6 +157,8 @@
             android:backgroundTint="#00FFFFFF"
             android:text="@string/menPribatutasunPolitikak"
             android:textAlignment="viewStart"
+            android:background="@android:color/transparent"
+            android:layout_marginLeft="5sp"
             android:textAllCaps="true" />
 
         <Space
